@@ -23,6 +23,11 @@ Changes in 0.61.2:
   * The networked repository server and client code has been changed
     to use the 'deflate' Content-encoding type instead of 'zlib',
     which makes the code RFC 2616 (HTTP 1.1) compliant.
+  * A new function called hasUnresolvedSymbols() has been added to the
+    elf module.  This could be useful for a contributor to implement a
+    policy that checks to make sure that shared libraries do not have
+    unresolved symbols.  Additional code could be written to check
+    binaries too.
 
 Changes in 0.61.1:
   * Cleaned up error message which results from Conary not being able to
